# classif_basic

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_gpu  Makefile  README.md  binary_classification_xgb_census.ipynb  data_preparation.py  model.py  model_analysis.py  pyproject.toml
classif_basic/: data_preparation.py  graph.py  loader.py  model.py  model_analysis.py
classif_basic/graph/: data_to_graph.py  evaluate.py  laf.py  loader.py  models.py  plot.py  train.py  utils.py
classif_basic/tree/: decision_tree.py  (+1 more)
notebooks/: Aggregation Tutorial.ipynb  Fair_detection_correction_xgb_binary_classification_census.ipynb  Fair_detection_correction_xgb_multi_classification_housing_nights.ipynb  Fair_detection_correction_xgb_regression_housing.ipynb  G.gv  GCN_introduction.ipynb  LAF Census.ipynb  benchmark_gcn_basic.ipynb  binary_classification_census_post_hoc_tree.ipynb  binary_classification_census_xgb.ipynb  binary_classification_census_xgb_feat_interaction_constraints.ipynb  data_census_graph_tests.ipynb  data_census_large_graph_tests.ipynb  data_census_tabular_to_graph.ipynb  data_census_tabular_to_graph_on_notebook.ipynb  data_census_tabular_to_graph_on_notebook_tabgnn.ipynb  data_census_tabular_to_graph_train_test_split.ipynb  data_graph_no_import.ipynb  gcn_ancestor_census.ipynb  gcn_ancestor_compare_xgb.ipynb  gcn_census_hierarchy_tests.ipynb  gcn_census_neighbor_sampling.ipynb  hybrinfox_xgb_classif.ipynb  structural_model_census.ipynb
pre-commit/: pre-commit  pre-commit.py
tests/: test_template_package_python.py
(+2 files in other folders)
