[tool.poetry]
name = "classif_basic" # be careful to never give same name as existing package in pypi
version = "0.0.1"
description = ""
authors = ["thomas souverain <tom.souverain@free.fr>"]

[tool.poetry.dependencies]
python = "^3.8.0"
pandas = "^1.3.1"
sklearn = "^0.0"
fairlearn = "^0.7.0"
matplotlib = "^3.5.1"
plotly = "^5.5.0"
seaborn = "^0.11.2"
tqdm = "^4.62.3"
xgboost = "^1.5.2"
shap = "^0.40.0"
jupyter = "^1.0.0"
torch = "^1.13.1"
torch-geometric = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
jupyterlab = "^3.1.6"
jupyter-contrib-nbextensions = "^0.5.1"
autopep8 = "^1.5.7"
coverage = "^5.5"
pre-commit = "^2.14.0"
black = "^21.7b0"
reorder-python-imports = "^2.6.0"
torch-sparse = "^0.6.16"
torch-scatter = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''